CMake properties updated and minimal name changes from method.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,21 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-add_executable(${PROJECT_NAME} main.cpp companion.cpp search/search.cpp search/compare.cpp search/flann.cpp search/templatematch.cpp)
+SET(SOURCE
+  companion.cpp
+  search/search.cpp
+  search/compare.cpp
+  search/flann.cpp
+  search/templatematch.cpp
+)
+
+SET(HEADERS
+  companion.h
+  search/search.h
+  search/compare.h
+  search/flann.h
+  search/templatematch.h
+)
+
+add_executable(${PROJECT_NAME} main.cpp ${SOURCE} ${HEADERS})
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
