--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 2.8)
 find_package(OpenCV REQUIRED)
 find_package(OpenMP REQUIRED)
 add_subdirectory(src)
+set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
