Histogramm feature added and custom show result images for search.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,7 @@ project(Companion)
 cmake_minimum_required(VERSION 2.8)
 find_package(OpenCV REQUIRED)
 find_package(OpenMP REQUIRED)
-add_subdirectory(src)
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
+unset(CUDA_USE_STATIC_CUDA_RUNTIME CACHE)
+option(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
+add_subdirectory(src)
