CMake structure changed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ find_package(OpenMP REQUIRED)
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
 unset(CUDA_USE_STATIC_CUDA_RUNTIME CACHE)
 option(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
-add_subdirectory(src)
+add_subdirectory(libCompanion)
+add_subdirectory(main)
