--- a/libCompanion/companion/CMakeLists.txt
+++ b/libCompanion/companion/CMakeLists.txt
@@ -1,25 +1,22 @@
+
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
 unset(CUDA_USE_STATIC_CUDA_RUNTIME CACHE)
 option(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
 
 SET(SOURCE
-  companion.cpp
-  search/search.cpp
-  search/compare.cpp
-  search/featurematch.cpp
-  search/templatematch.cpp
-)
+        companion.cpp companion.h
+        openCV3/stream/VideoCapture.cpp openCV3/stream/VideoCapture.h
+        openCV3/search/ImageRecognition.cpp openCV3/search/ImageRecognition.h
+        openCV3/search/SimpleCompareImage.cpp openCV3/search/SimpleCompareImage.h
+        openCV3/search/TemplateMatch.cpp openCV3/search/TemplateMatch.h
+        openCV3/util/Util.cpp openCV3/util/Util.h
+        openCV3/model/Comparison.cpp openCV3/model/Comparison.h
+        openCV3/search/FeatureMatching.cpp openCV3/search/FeatureMatching.h
+        openCV3/util/CompanionError.h)
 
-SET(HEADERS
-  companion.h
-  search/search.h
-  search/compare.h
-  search/featurematch.h
-  search/templatematch.h
-)
-
-add_library(libCompanion ${SOURCE} ${HEADERS})
+add_library(libCompanion ${SOURCE})
 target_link_libraries(libCompanion ${OpenCV_LIBS})
