--- a/libCompanion/companion/CMakeLists.txt
+++ b/libCompanion/companion/CMakeLists.txt
@@ -16,7 +16,7 @@ SET(SOURCE
         openCV3/util/Util.cpp openCV3/util/Util.h
         openCV3/model/Comparison.cpp openCV3/model/Comparison.h
         openCV3/search/FeatureMatching.cpp openCV3/search/FeatureMatching.h
-        openCV3/util/CompanionError.h)
+        openCV3/util/CompanionError.h openCV3/detection/HarrisCorner.cpp openCV3/detection/HarrisCorner.h)
 
 add_library(libCompanion ${SOURCE})
 target_link_libraries(libCompanion ${OpenCV_LIBS})
