First prototype feature recognition. Unstable currently.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,24 @@ unset(CUDA_USE_STATIC_CUDA_RUNTIME CACHE)
 option(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
 
 # Lib dependency
-set(OpenCV_LIBS opencv_core opencv_imgproc opencv_highgui opencv_features2d)
+set(OpenCV_LIBS
+        opencv_calib3d
+        opencv_core
+        opencv_features2d
+        opencv_flann
+        opencv_highgui
+        opencv_imgcodecs
+        opencv_imgproc
+        opencv_ml
+        opencv_objdetect
+        opencv_photo
+        opencv_shape
+        opencv_stitching
+        opencv_superres
+        opencv_ts
+        opencv_video
+        opencv_videoio
+        opencv_videostab)
 
 add_subdirectory(libCompanion)
 add_subdirectory(main)
