Documentation and libbost append to project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,11 @@
 project(Companion)
 cmake_minimum_required(VERSION 2.8)
 
+set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
+
 find_package(OpenCV REQUIRED)
 find_package(OpenMP REQUIRED)
-
-set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
-unset(CUDA_USE_STATIC_CUDA_RUNTIME CACHE)
-
-option(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
+find_package(Boost REQUIRED COMPONENTS thread)
 
 # Lib dependency
 set(OpenCV_LIBS
@@ -27,8 +25,7 @@ set(OpenCV_LIBS
         opencv_ts
         opencv_video
         opencv_videoio
-        opencv_videostab
-        opencv_xfeatures2d)
+        opencv_videostab)
 
 add_subdirectory(libCompanion)
 add_subdirectory(main)
