--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -7,6 +7,6 @@ SET(SOURCE
   main.cpp
 )
 
-add_executable(Example ${SOURCE})
+add_executable(Main ${SOURCE})
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
-target_link_libraries(Example libCompanion ${Boost_LIBRARIES})
+target_link_libraries(Main libCompanion ${Boost_LIBRARIES})
