Include changed and comments add new tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 project(Companion)
 cmake_minimum_required(VERSION 2.8)
 
+set(libCompanion Companion)
+set(main Main)
+
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
 
 find_package(OpenCV REQUIRED)
