Testing dir included for algorithm tests which are not included to current lib. Camshift algorithm included in testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ find_package(Boost REQUIRED COMPONENTS thread system)
 
 add_subdirectory(libCompanion)
 add_subdirectory(main)
+add_subdirectory(testing)
