--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -1,3 +1,2 @@
 add_executable(camshift camshift.cpp)
-INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
-target_link_libraries(camshift ${OpenCV_LIBS} ${Boost_LIBRARIES})
+target_link_libraries(camshift ${OpenCV_LIBS})
