--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ project(Companion)
 cmake_minimum_required(VERSION 2.8)
 
 set(libCompanion Companion)
-set(main Main)
+set(main main)
 
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
 
