Configuration files implement and image processing class.

--- a/libCompanion/CMakeLists.txt
+++ b/libCompanion/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_subdirectory(companion)
-target_include_directories (libCompanion PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories (Companion PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
