Refactoring from libcompanion.
Added error event handler and result handler and new params to setup image recognition libs.

--- a/libCompanion/companion/CMakeLists.txt
+++ b/libCompanion/companion/CMakeLists.txt
@@ -4,22 +4,21 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 SET(SOURCE
-        openCV3/algo/ImageRecognition.h
-        openCV3/algo/FeatureMatching.cpp openCV3/algo/FeatureMatching.h
-        openCV3/algo/RectangleDetection.cpp openCV3/algo/RectangleDetection.h
-        openCV3/configuration/CompanionConfig.cpp openCV3/configuration/CompanionConfig.h
-        openCV3/draw/Drawable.h
-        openCV3/draw/Lines.cpp openCV3/draw/Lines.h
-        openCV3/draw/Line.cpp openCV3/draw/Line.h
-        openCV3/model/FeatureMatchingModel.cpp openCV3/model/FeatureMatchingModel.h
-        openCV3/model/ImageRecognitionModel.cpp openCV3/model/ImageRecognitionModel.h
-        openCV3/processing/ImageProcessing.h
-        openCV3/processing/ObjectDetection.cpp openCV3/processing/ObjectDetection.h
-        openCV3/stream/Video.cpp openCV3/stream/Video.h
-        openCV3/thread/ConsumerStream.cpp openCV3/thread/ConsumerStream.h
-        openCV3/thread/ProducerStream.cpp openCV3/thread/ProducerStream.h
-        openCV3/util/CompanionError.h
-        openCV3/util/Util.cpp openCV3/util/Util.h)
+        Companion.cpp Companion.h
+        algo/ImageRecognition.h
+        algo/FeatureMatching.cpp algo/FeatureMatching.h
+        draw/Drawable.h
+        draw/Lines.cpp draw/Lines.h
+        draw/Line.cpp draw/Line.h
+        model/FeatureMatchingModel.cpp model/FeatureMatchingModel.h
+        model/ImageRecognitionModel.cpp model/ImageRecognitionModel.h
+        processing/ImageProcessing.h
+        processing/ObjectDetection.cpp processing/ObjectDetection.h
+        stream/Video.cpp stream/Video.h
+        thread/ConsumerStream.cpp thread/ConsumerStream.h
+        thread/ProducerStream.cpp thread/ProducerStream.h
+        util/CompanionError.h
+        util/Util.cpp util/Util.h)
 
 add_library(Companion ${SOURCE})
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
