--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -8,5 +8,4 @@ SET(SOURCE
 )
 
 add_executable(Main ${SOURCE})
-INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
-target_link_libraries(Main Companion ${Boost_LIBRARIES})
+target_link_libraries(Main Companion)
