--- a/libCompanion/companion/CMakeLists.txt
+++ b/libCompanion/companion/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 SET(SOURCE
         Companion.cpp Companion.h
-        algo/ImageRecognition.h
+        algo/abstract/ImageRecognition.h
         algo/abstract/AbstractFeatureMatching.cpp algo/abstract/AbstractFeatureMatching.h
         algo/cuda/CudaFeatureMatching.cpp algo/cuda/CudaFeatureMatching.h
         algo/cpu/CPUFeatureMatching.cpp algo/cpu/CPUFeatureMatching.h
