Cuda implementation is now optional if cuda is not supported on device.

--- a/libCompanion/companion/CMakeLists.txt
+++ b/libCompanion/companion/CMakeLists.txt
@@ -3,11 +3,12 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
+option(USE_CUDA "Use cuda implementation from libCompanion" OFF)
+
 SET(SOURCE
         Companion.cpp Companion.h
         algo/abstract/ImageRecognition.h
         algo/abstract/AbstractFeatureMatching.cpp algo/abstract/AbstractFeatureMatching.h
-        algo/cuda/CudaFeatureMatching.cpp algo/cuda/CudaFeatureMatching.h
         algo/cpu/CPUFeatureMatching.cpp algo/cpu/CPUFeatureMatching.h
         draw/Drawable.h
         draw/Lines.cpp draw/Lines.h
@@ -19,7 +20,13 @@ SET(SOURCE
         stream/Video.cpp stream/Video.h
         thread/StreamWorker.cpp thread/StreamWorker.h
         util/CompanionError.h
-        util/Util.cpp util/Util.h)
+        util/Util.cpp util/Util.h
+        util/Definitions.h)
+
+if(USE_CUDA)
+    SET(SOURCE ${SOURCE}
+            algo/cuda/CudaFeatureMatching.cpp algo/cuda/CudaFeatureMatching.h)
+endif()
 
 add_library(Companion ${SOURCE})
 target_link_libraries(Companion ${OpenCV_LIBS})
