--- a/testing/rectangleDetection/CMakeLists.txt
+++ b/testing/rectangleDetection/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(RectangleDetection RectangleDetection.cpp RectangleDetection.h)
+add_executable(RectangleDetection RectangleDetection.cpp)
 target_link_libraries(RectangleDetection ${OpenCV_LIBS})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
