Missing includes and libs in cmake added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
 option(USE_CUDA "Use cuda implementation from libCompanion" OFF)
 option(BUILD_SHARED_LIBRARY "Build shared library" OFF)
 
-set(OpenCVComponents "core" "imgproc" "features2d")
+set(OpenCVComponents "core" "imgproc" "imgcodecs" "features2d" "videoio" "calib3d")
 if(USE_CUDA)
     set(OpenCVComponents ${OpenCVComponents} "cudafeatures2d")
 endif()
